k0s/05_app/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orp
