k0s/05_app/03_keycloack_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-service
  namespace: orp
spec:
  selector:
    app: postgres-keycloak
  ports:
  - name: http-gitea
    port: 5432
    targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-keycloak
  namespace: orp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-keycloak
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data-vol
          subPath: postgreskeycloak
      restartPolicy: Always
      volumes:
      - name: postgres-data-vol
        persistentVolumeClaim:
          claimName: keycloak-postgres-data
