k0s/05_app/07_log_service.yaml
# kubectl apply -f <(../03_istio_helm/istio-1.8.0/bin/istioctl kube-inject -f 07_log_service.yaml) -n orp

kind: Service
apiVersion: v1
metadata:
  name: log-service
  namespace: orp
  labels:
    app: log-service
spec:
  selector:
    app: log-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-app
  namespace: orp
  version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: log-app
      version: v1
  template:
    metadata:
      labels:
        app: log-app
        version: v1
    spec:
      containers:
      - name: log-container
        image: registry.domain.com/app_log:latest
        ports:
        - containerPort: 8085
      imagePullSecrets:
      - name: orp-registry-secret
