k0s/05_app/08_db_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-appdb
  namespace: orp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-appdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-appdb
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data-vol
          subPath: postgresappdb
      restartPolicy: Always
      volumes:
      - name: postgres-data-vol
        persistentVolumeClaim:
          claimName: orp-db-volumne
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-appdb
  namespace: orp
spec:
  selector:
    app: postgres-appdb
  ports:
  - name: tcp-appdb-port
    port: 5432
    targetPort: 5432
---

kind: Service
apiVersion: v1
metadata:
  name: db-service
  namespace: orp
  labels:
    app: db-service
spec:
  selector:
    app: db-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-app
  namespace: orp
  version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db-app
      version: v1
  template:
    metadata:
      labels:
        app: db-app
        version: v1
    spec:
      containers:
      - name: db-container
        image: registry.domain.com/appdb:latest
        ports:
        - containerPort: 8081
      imagePullSecrets:
        - name: orp-registry-secret
