k0s/05_app/11_redis.yaml
# kubectl apply -f <(../03_istio_helm/istio-1.8.0/bin/istioctl kube-inject -f 11_redis.yaml) -n orp

kind: Service
apiVersion: v1
metadata:
  name: redis-service
  namespace: orp
  labels:
    app: redis-app
spec:
  selector:
    app: redis-app
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app
  namespace: orp
  version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
      version: v1
  template:
    metadata:
      labels:
        app: redis-app
        version: v1
    spec:
      containers:
      - name: redis-app
        image: k8s.gcr.io/redis:e2e
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
