k0s/05_app/10_destrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: http-service
  namespace: orp
spec:
  host: http-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: db-service
  namespace: orp
spec:
  host: db-service
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: log-service
  namespace: orp
spec:
  host: log-service
  subsets:
  - name: v1
    labels:
      version: v1
